fixed order edit

--- a/BabyInABag/Styles/styleMain.css
+++ b/BabyInABag/Styles/styleMain.css
@@ -3,6 +3,9 @@
 html body {
     margin: 0%;
     font-family: monospace;
+    position: relative;
+    min-height: 100vh; /* will cover the 100% of viewport */
+    padding-bottom: 236px; /* height of your footer */
 }
 
 /*To reset some of the tags modified by Bootstrap*/
@@ -290,6 +293,8 @@ footer {
     padding: 40px 40px;
     background-color: #111;
     overflow: hidden;
+    position: absolute;
+    bottom: 0;
 }
 
     footer ul {
