--- a/BabyInABag/Views/Orders/Index.cshtml
+++ b/BabyInABag/Views/Orders/Index.cshtml
@@ -51,7 +51,7 @@
                         @Html.DisplayFor(modelItem => item.Order_Status)
                     </td>
                     <td>
-                        @Html.ActionLink("Edit", "Edit", "Orders", new { id = item.Order_Id }, null)
+                        @Html.ActionLink("Edit", "Edit", "Orders", new { ids = item.Order_Id }, null)
                     </td>
                 </tr>
             }
