--- a/BabyInABag/Views/Admin/Reports.cshtml
+++ b/BabyInABag/Views/Admin/Reports.cshtml
@@ -9,7 +9,7 @@
 <div class="main-contents">
     <!-- Panel -->
     <div class="main">
-        <iframe src="http://localhost:60567/DotNetReport/Index" style="height:750px;width:100%;resize:both;overflow:auto;" frameborder="0"></iframe>
+        <iframe src="https://demo-babyinabag.azurewebsites.net//DotNetReport/Index" style="height:750px;width:100%;resize:both;overflow:auto;" frameborder="0"></iframe>
     </div>
 <!-- End of Panel -->
     </div>
