--- a/BabyInABag/Views/Home/Index.cshtml
+++ b/BabyInABag/Views/Home/Index.cshtml
@@ -40,19 +40,19 @@
             <h2>What people think about us!</h2>
             <div class="testimonial-wrapper">
                 <div class="testimonial-info">
-                    <img class="" src="~/images/banner3.png" alt="Testimonial Image">
+                    <img class="" src="/images/banner3.png" alt="Testimonial Image">
                     <p>Jamil Granada</p>
                     <p>"This is the best plastic bag ever! It is so light and compact!"</p>
                 </div>
 
                 <div class="testimonial-info">
-                    <img class="" src="~/images/banner3.png" alt="Testimonial Image">
+                    <img class="" src="/images/banner3.png" alt="Testimonial Image">
                     <p>Jamil Granada</p>
                     <p>"This is the best plastic bag ever! It is so light and compact!"</p>
                 </div>
 
                 <div class="testimonial-info">
-                    <img class="" src="~/images/banner3.png" alt="Testimonial Image">
+                    <img class="" src="/images/banner3.png" alt="Testimonial Image">
                     <p>Jamil Granada</p>
                     <p>"This is the best plastic bag ever! It is so light and compact!"</p>
                 </div>
