--- a/BabyInABag/Views/Orders/Edit.cshtml
+++ b/BabyInABag/Views/Orders/Edit.cshtml
@@ -1,6 +1,5 @@
 ﻿@using BabyInABag.Models
 @model Order
-
 @{
     ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
@@ -33,92 +32,98 @@
     </style>
 </head>
 
-<!-- Contents -->
-<div class="main-contents">
-    <!-- Panel -->
-    <div class="main">
-        @using (Html.BeginForm("Edit", "Orders", FormMethod.Post, new { enctype = "multipart/form-data" }))
-        {
-            @Html.AntiForgeryToken()
+    <!-- Contents -->
+    <div class="main-contents">
+        <!-- Panel -->
+        <div class="main">
+            @using (Html.BeginForm("Edit", "Orders", FormMethod.Post, new { enctype = "multipart/form-data" }))
+            {
+                @Html.AntiForgeryToken()
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                @Html.HiddenFor(model => model.Order_Id)
+                @Html.HiddenFor(model => model.Order_Date_Placed)
+                @Html.HiddenFor(model => model.Full_Name)
+                @Html.HiddenFor(model => model.Shipping_Address)
 
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            @Html.HiddenFor(model => model.Order_Id)
-            @Html.HiddenFor(model => model.Order_Date_Placed)
-            @Html.HiddenFor(model => model.Order_Total)
-            @Html.HiddenFor(model => model.Full_Name)
-            @Html.HiddenFor(model => model.Shipping_Address)
-
-            @Html.HiddenFor(model => model.Id)
-            @Html.HiddenFor(model => model.Customer.Id)
-            <font size="4">
-                <h2 id="admin-header-text">MANAGE ORDER</h2>
-                <hr>
-                <!-- Table Content Order ID and Account Information-->
-                <div>
-                    <table style="margin-bottom:10px">
-                        <tr>
-                            <th>Order ID #@Html.DisplayFor(model => model.Order_Id)</th>
-                            <th>Account Information</th>
-                        </tr>
-                        <tr>
-                            <td><p style="margin: 0px;">Order Date: @Html.DisplayFor(model => model.Order_Date_Placed) </p></td>
-                            <td>
-                                @{
-                                    var fullName = Model.Customer.FirstName + " " + Model.Customer.LastName;
-                                    <p style="margin: 0px;">Customer Name: @Html.DisplayFor(model => fullName)</p>
-                                }
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                Order Status:
-                                @Html.DropDownListFor(model => model.Order_Status, new SelectList(Enum.GetValues(typeof(order_status))))
-                            </td>
-                            <td><p style="margin:0px;">Email: @Html.DisplayFor(model => model.Customer.Email)</p></td>
-                        </tr>
-                    </table>
-                </div>
-                <!-- Table 2 Content Shipping Address and Invoice-->
-                <div>
-                    <table style="margin-bottom:10px">
-                        <tr>
-                            <th>Shipping Address</th>
-                            <th>Invoice</th>
-                        </tr>
-                        <tr>
-                            <td><p style="margin: 0px;">@Html.DisplayFor(model => model.Shipping_Address)</p></td>
-
-                        </tr>
-                    </table>
-                </div>
-                <!-- Table 3 Content Items -->
-                <div>
-                    <table>
-                        <tr>
-                            <th>Items</th>
-                            <th>Size</th>
-                            <th>Price</th>
-                            <th>Qty</th>
-                            <th>Tax</th>
-                            <th>Raw Total</th>
-                        </tr>
-                        @foreach (var item in Model.Products)
-                        {
+                @Html.HiddenFor(model => model.Id)
+                @Html.HiddenFor(model => model.Customer.Id)
+                <font size="4">
+                    <h2 id="admin-header-text">MANAGE ORDER</h2>
+                    <hr>
+                    <!-- Table Content Order ID and Account Information-->
+                    <div>
+                        <table style="margin-bottom:10px">
                             <tr>
-                                <td><p style="margin: 0px;">@Html.DisplayFor(modelItem => item.Product_Name)</p></td>
-                                <td>@Html.DisplayFor(modelItem => item.Product_Price)</td>
-                                <td>1</td>
-                                <td>$0.00</td>
-                                <td>@Html.DisplayFor(modelItem => item.Product_Price)</td>
+                                <th>Order ID #@Html.DisplayFor(model => model.Order_Id)</th>
+                                <th>Account Information</th>
                             </tr>
-                        }
-                    </table>
-                </div>
-                <input type="submit" value="Update" class="btn btn-default" />
-                @*<button type="button" onclick="alert('Order Successfully Updated')">Update</button>*@
-            </font>
-        }
+                            <tr>
+                                <td><p style="margin: 0px;">Order Date: @Html.DisplayFor(model => model.Order_Date_Placed) </p></td>
+                                <td>
+                                    @{
+                                        var fullName = Model.Customer.FirstName + " " + Model.Customer.LastName;
+                                        <p style="margin: 0px;">Customer Name: @Html.DisplayFor(model => fullName)</p>
+                                    }
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    Order Status:
+                                    @Html.DropDownListFor(model => model.Order_Status, new SelectList(Enum.GetValues(typeof(order_status))))
+                                </td>
+                                <td><p style="margin:0px;">Email: @Html.DisplayFor(model => model.Customer.Email)</p></td>
+                            </tr>
+                        </table>
+                    </div>
+                    <!-- Table 2 Content Shipping Address and Invoice-->
+                    <div>
+                        <table style="margin-bottom:10px">
+                            <tr>
+                                <th>Order Name</th>
+                                <th>Shipping Address</th>
+                            </tr>
+                            <tr>
+                                <td><p style="margin: 0px;">@Html.DisplayFor(model => model.Full_Name) </p></td>
+                                <td><p style="margin: 0px;">@Html.DisplayFor(model => model.Shipping_Address)</p></td>
+                            </tr>
+                        </table>
+                    </div>
+                    <!-- Table 3 Content Items -->
+                    <div>
+                        <table style="margin-bottom:10px">
+                            <tr>
+                                <th>Items</th>
+                                <th>Qty</th>
+                                <th>Price</th>
+                            </tr>
+                            @foreach (var item in Model.Products)
+                            {
+                                <tr>
+                                    <td><p style="margin: 0px;">@Html.DisplayFor(modelItem => item.Product_Name)</p></td>
+                                    <td>@Html.DisplayFor(modelItem => item.Quantity)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Product_Price)</td>
+                                </tr>
+                            }
+                        </table>
+                    </div>
+                    <!-- Table 4 Content Total-->
+                    <div>
+                        <table>
+                            <tr>
+                                <th>Order Total:</th>
+                                <th>$@Html.DisplayFor(model => model.Order_Total)</th>
+                            </tr>
+                        </table>
+                    </div>
+                    <input type="submit" value="Update" class="btn btn-default" />
+                    @*<button type="button" onclick="alert('Order Successfully Updated')">Update</button>*@
+                </font>
+            }
+        </div>
+        <!-- End of Panel -->
     </div>
-    <!-- End of Panel -->
-</div>
-<!-- End of Contents -->
+    <!-- End of Contents -->
+   
+@*<div>
+    @Html.ActionLink("Back to List", "Index")
+</div>*@
