--- a/BabyInABag/Views/Orders/GetPayPalData.cshtml
+++ b/BabyInABag/Views/Orders/GetPayPalData.cshtml
@@ -6,14 +6,18 @@
     ViewBag.Title = "GetPayPalData";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div style="text-align:center">
+<main>
+    <section class="section-first section-spacing products">
+        <div style="text-align:center">
 
-    <h2 >Thank you for your Payment!</h2>
-    
-        <img src="~/images/checkmark_success.gif" />
-        
-    <hr />
-    <h2><b>Your order number is:</b></h2><p>@ViewBag.OrderNumber</p>
-    <p>To view your order, Please @Html.ActionLink("Click here", "", "", new { Style = "text-decoration: underline; color:Blue;" })</p>
-</div>
+            <h2>Thank you for your Payment!</h2>
+
+            <img src="/images/checkmark_success.gif" />
+
+            <hr />
+            <h2><b>Your order number is:</b></h2><p>@ViewBag.OrderNumber</p>
+            <p>To view your order, Please @Html.ActionLink("Click here", "", "", new { Style = "text-decoration: underline; color:Blue;" })</p>
+        </div>
+        </section>
+</main>
 
