--- a/BabyInABag/Views/Home/Index.cshtml
+++ b/BabyInABag/Views/Home/Index.cshtml
@@ -40,27 +40,28 @@
             <h2>What people think about us!</h2>
             <div class="testimonial-wrapper">
                 <div class="testimonial-info">
-                    <img class="" src="/images/banner3.png" alt="Testimonial Image">
-                    <p>Jamil Granada</p>
-                    <p>"This is the best plastic bag ever! It is so light and compact!"</p>
+                    <img src="https://i.imgur.com/veAEeAB.jpg" alt="Testimonial Image" />
+                    <p>Jeff Rothchild</p>
+                    <p>"My baby is looking cute in it!"</p>
                 </div>
 
                 <div class="testimonial-info">
-                    <img class="" src="/images/banner3.png" alt="Testimonial Image">
-                    <p>Jamil Granada</p>
-                    <p>"This is the best plastic bag ever! It is so light and compact!"</p>
+                    <img src="https://i.imgur.com/gRzU4tP.png" alt="Testimonial Image" />
+                    <p>Robert kaif</p>
+                    <p>"This is so comforting and nice product!"</p>
                 </div>
 
                 <div class="testimonial-info">
-                    <img class="" src="/images/banner3.png" alt="Testimonial Image">
+                    <img src="https://i.imgur.com/s1ocvWY.png" alt="Testimonial Image" />
                     <p>Jamil Granada</p>
-                    <p>"This is the best plastic bag ever! It is so light and compact!"</p>
+                    <p>"This is the best sleeping bag ever! It is so light and compact!"</p>
                 </div>
 
                 <div class="testimonial-info">
-                    <img class="" src="~/images/banner3.png" alt="Testimonial Image">
-                    <p>Jamil Granada</p>
-                    <p>"This is the best plastic bag ever! It is so light and compact!"</p>
+
+                    <img src="https://i.imgur.com/b5PxlsX.png" alt="Testimonial Image" />
+                    <p>Mathew Yeboah</p>
+                    <p>"Nice and easy to use!"</p>
                 </div>
             </div>
         </section>
