--- a/BabyInABag/Views/Orders/Edit.cshtml
+++ b/BabyInABag/Views/Orders/Edit.cshtml
@@ -110,7 +110,7 @@
                     <div>
                         <table>
                             <tr>
-                                <th>Order Total:</th>
+                                <th>Order Total:</th>@Html.HiddenFor(model => model.Order_Total)
                                 <th>$@Html.DisplayFor(model => model.Order_Total)</th>
                             </tr>
                         </table>
