--- a/BabyInABag/Views/Orders/GetPayPalData.cshtml
+++ b/BabyInABag/Views/Orders/GetPayPalData.cshtml
@@ -11,8 +11,8 @@
         <div style="text-align:center">
 
             <h2>Thank you for your Payment!</h2>
-
-            <img src="/images/checkmark_success.gif" />
+            <img src="https://i.imgur.com/qQS62XC.gif" />
+            
 
             <hr />
             <h2><b>Your order number is:</b></h2><p>@ViewBag.OrderNumber</p>
