--- a/BabyInABag/Views/Account/ConfirmEmail.cshtml
+++ b/BabyInABag/Views/Account/ConfirmEmail.cshtml
@@ -3,8 +3,12 @@
 }
 
 <h2>@ViewBag.Title.</h2>
-<div>
-    <p>
-        Thank you for confirming your email. Please @Html.ActionLink("Click here to Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
-    </p>
-</div>
+<main>
+    <section class="section-first section-spacing products">
+        <div>
+            <p>
+                Thank you for confirming your email. Please @Html.ActionLink("Click here to Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+            </p>
+        </div>
+    </section>
+</main>
