--- a/BabyInABag/Styles/styleMain.css
+++ b/BabyInABag/Styles/styleMain.css
@@ -5,7 +5,7 @@ html body {
     font-family: monospace;
     position: relative;
     min-height: 100vh; /* will cover the 100% of viewport */
-    padding-bottom: 300px; /* height of your footer */
+    padding-bottom: 450px; /* height of your footer */
 }
 
 /*To reset some of the tags modified by Bootstrap*/
@@ -60,6 +60,10 @@ section {
 }
 
 @media only screen and (min-width: 1000px) {
+    html body {
+        padding-bottom: 300px; /* height of your footer */
+    }
+
     .section-first {
         margin-top: 100px;
     }
