center aligned: login and register

--- a/BabyInABag/Views/Account/Register.cshtml
+++ b/BabyInABag/Views/Account/Register.cshtml
@@ -21,38 +21,38 @@
 
             <div class="form-group">
                 
-                <div class="col-md-10">
+                <div>
                     @Html.TextBoxFor(m => m.FirstName, new { Style = "width:70%;height:20%", placeholder = "First Name" })
                 </div>
             </div>
 
             <div class="form-group">
                
-                <div class="col-md-10">
+                <div>
                     @Html.TextBoxFor(m => m.LastName, new { Style = "width:70%;height:10%", placeholder = "Last Name" })
                 </div>
             </div>
 
             <div class="form-group">
                
-                <div class="col-md-10">
+                <div>
                     @Html.TextBoxFor(m => m.Email, new { Style = "width:70%;height:10%", placeholder = "Email" })
                 </div>
             </div>
             <div class="form-group">
               
-                <div class="col-md-10">
+                <div>
                     @Html.PasswordFor(m => m.Password, new { Style = "width:70%;height:10%", placeholder = "Password" })
                 </div>
             </div>
             <div class="form-group">
                
-                <div class="col-md-10">
+                <div>
                     @Html.PasswordFor(m => m.ConfirmPassword, new { Style = "width:70%; height:10%", placeholder = "Password" })
                 </div>
             </div>
             <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
+                <div>
                     <input type="submit" class="btn btn-default" value="Register" />
                 </div>
             </div>
