--- a/BabyInABag/Views/Account/Login.cshtml
+++ b/BabyInABag/Views/Account/Login.cshtml
@@ -6,9 +6,9 @@
 
 <h2>@ViewBag.Title.</h2>
 <main style="text-align:center">
-    <div class="row">
+    @*<div class="row">*@
         @*class="col-md-6"*@
-        <div class="col-md-6">
+        @*<div class="col-md-6">*@
             <section id="loginForm" class="section-first section-spacing products">
                 @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                 {
@@ -20,20 +20,20 @@
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     <div class="form-group">
 
-                        <div class="col-md-10">
+                        <div>
                             @Html.TextBoxFor(m => m.Email, new { Style = "width:90%;", placeholder = "Email" })
                             @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <div class="form-group">
 
-                        <div class="col-md-10">
+                        <div>
                             @Html.PasswordFor(m => m.Password, new { Style = "width:90%;", placeholder = "Password" })
                             @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <div class="form-group">
-                        <div class="col-md-offset-2 col-md-10">
+                        <div>
                             <div class="checkbox">
                                 @Html.CheckBoxFor(m => m.RememberMe)
                                 @Html.LabelFor(m => m.RememberMe)
@@ -41,7 +41,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <div class="col-md-offset-2 col-md-10">
+                        <div>
                             <input type="submit" value="Log in" class="btn btn-default" />
                         </div>
                     </div>
@@ -55,13 +55,13 @@
 
                 }
             </section>
-        </div>
+        @*</div>*@
         @*<div class="col-md-4">
             <section id="socialLoginForm">
                 @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
             </section>
         </div>*@
-    </div>
+    @*</div>*@
 </main>
 
         @section Scripts {
