CartQuantity String added

--- a/BabyInABag/Views/Orders/Edit.cshtml
+++ b/BabyInABag/Views/Orders/Edit.cshtml
@@ -112,6 +112,8 @@
                             <tr>
                                 <th>Order Total:</th>@Html.HiddenFor(model => model.Order_Total)
                                 <th>$@Html.DisplayFor(model => model.Order_Total)</th>
+                                <th>Cart Quantity String:</th>
+                                <th>$@Html.DisplayFor(model => model.cartQuantity)</th>
                             </tr>
                         </table>
                     </div>
