--- a/BabyInABag/Views/Orders/Edit.cshtml
+++ b/BabyInABag/Views/Orders/Edit.cshtml
@@ -54,7 +54,7 @@
                     <div>
                         <table style="margin-bottom:10px">
                             <tr>
-                                <th>Order ID #@Html.DisplayFor(model => model.Order_Id)</th>
+                                <th>Order Number #@Html.DisplayFor(model => model.Order_Number)</th>
                                 <th>Account Information</th>
                             </tr>
                             <tr>
@@ -100,16 +100,23 @@
                             {
                             <tr>
                                 <td><p style="margin: 0px;">@Html.DisplayFor(modelItem => item.Product_Name)</p></td>
+
                                 @for (int i = 0; i < Model.productListing.Length; i++)
                                 {
-                                    if (Model.productListing[i] != "")
+
+                                    if (Model.productListing[i] != "" || Model.productListing != null)
                                     {
+
                                         string[] prod = Model.productListing[i].Split(':');
-                                        if (Convert.ToInt32(prod[i]) == item.Product_Id)
+                                        string product_id = prod[0];
+                                        string product_quantity = prod[1];
+
+                                        if (product_id.Equals(item.Product_Id.ToString()))
                                         {
-                                            var truequantity = prod[i + 1];
-                                            <td>@Html.DisplayFor(model => truequantity)</td>
+                                            <td>@Html.DisplayFor(model => product_quantity)</td>
+                                            break;
                                         }
+
                                     }
 
                                 }
@@ -124,8 +131,6 @@
                             <tr>
                                 <th>Order Total:</th>@Html.HiddenFor(model => model.Order_Total)
                                 <th>$@Html.DisplayFor(model => model.Order_Total)</th>
-                                <th>Cart Quantity String:</th>
-                                <th>$@Html.DisplayFor(model => model.cartQuantity)</th>
                             </tr>
                         </table>
                     </div>
