--- a/BabyInABag/Views/Shared/_AdminLayout.cshtml
+++ b/BabyInABag/Views/Shared/_AdminLayout.cshtml
@@ -66,6 +66,15 @@
                 }
             });
         }</script>
+
+    <script>
+        $('#password, #confirm_password').on('keyup', function () {
+            if ($('#password').val() == $('#confirm_password').val()) {
+                $('#message').html('Password Matching').css('color', 'green');
+            } else
+                $('#message').html('Password Not Matching').css('color', 'red');
+        });
+    </script>
 </body>
 </html>
 
