--- a/BabyInABag/Views/Orders/CustomerOrders.cshtml
+++ b/BabyInABag/Views/Orders/CustomerOrders.cshtml
@@ -8,22 +8,36 @@
 }
 
 <section class="section-first section-spacing">
-    @if (!Model.Any())
-    {
-        <h2>Take a look at what you've bought!</h2>
-        foreach (var item in Model)
-        {
-            <h1>Order @i</h1>
-            <h4><b>Customer Identification:</b> @Html.DisplayFor(modelItem => item.Id)</h4>
-            <h4><b>Order Number:</b> @Html.DisplayFor(modelItem => item.Order_Number)</h4>
-            <h4><b>Products:</b> @Html.DisplayFor(modelItem => item.Products)</h4>
-
-        }
-    }
-    else
+    @if (Model.Count() == 0)
     {
         <h2>You haven't bought any of our products yet!</h2>
     }
+    else
+    {
+        <h2>Take a look at what you've bought!</h2>
+        <table>
+            <th>Order Number</th>&nbsp;
+            <th>Placed Date</th>&nbsp;
+            <th>Products</th>&nbsp;
+            <th>Total Price</th>&nbsp;
+            <th>Status</th>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>@item.Order_Number</td>
+                    <td>@item.Order_Date_Placed</td>
+                    <td>@item.Products.Count()</td>
+                    <td>@item.Order_Total</td>
+                    <td>@item.Order_Status</td>
+                </tr>
+
+            }
+        </table>
+    }
 </section>
 
-
+<style>
+    th{
+        width:5%;
+    }
+</style>
