--- a/BabyInABag/Views/Orders/Edit.cshtml
+++ b/BabyInABag/Views/Orders/Edit.cshtml
@@ -44,6 +44,8 @@
                 @Html.HiddenFor(model => model.Order_Date_Placed)
                 @Html.HiddenFor(model => model.Full_Name)
                 @Html.HiddenFor(model => model.Shipping_Address)
+                @Html.HiddenFor(model => model.cartQuantity)
+                @Html.HiddenFor(model => model.Order_Number)
 
                 @Html.HiddenFor(model => model.Id)
                 @Html.HiddenFor(model => model.Customer.Id)
