Account,Style,Shared UI Update

--- a/BabyInABag/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/BabyInABag/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -2,12 +2,20 @@
     ViewBag.Title = "Forgot Password Confirmation";
 }
 
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-</hgroup>
-<div>
-    <p>
-        Please check your email to reset your password.
-    </p>
-</div>
+<main>
+    <div class="wrapper">
+
+        <section class="section-first section-spacing contact">
+            <hgroup class="title">
+                <h1>@ViewBag.Title.</h1>
+            </hgroup>
+            <div>
+                <p>
+                    Please check your email to reset your password.
+                </p>
+            </div>
+        </section>
+
+    </div>
+</main>
 	
