--- a/BabyInABag/Views/Account/Info.cshtml
+++ b/BabyInABag/Views/Account/Info.cshtml
@@ -3,6 +3,12 @@
     ViewBag.Title = "Info";
 }
 
-<h2>Please Confirm your email address!</h2>
+<main>
+    <div class="wrapper">
 
- 
+        <section class="section-first section-spacing">
+            <h2>Please Confirm your email address!</h2>
+        </section>
+
+    </div>
+</main>
