--- a/BabyInABag/Styles/styleContent.css
+++ b/BabyInABag/Styles/styleContent.css
@@ -193,3 +193,35 @@
     width: 80%;
     /*     margin-left: 1%*/
 }
+
+/*Contact*/
+.w3-black {
+    color: #fff;
+    background-color: #000;
+}
+
+.w3-section {
+    margin-top: 16px;
+    /*margin-bottom: 16px;*/
+}
+
+.w3-input {
+    padding: 8px;
+    /*display: block;*/
+    border: none;
+    border-bottom: 1px solid #ccc;
+    width: 100%;
+    /*max-width: 720px;*/
+}
+
+.w3-button {
+    border: none;
+    display: inline-block;
+    padding: 8px 16px;
+    vertical-align: middle;
+    overflow: hidden;
+    text-decoration: none;
+    text-align: center;
+    cursor: pointer;
+    white-space: nowrap
+}
