--- a/BabyInABag/Views/Account/ConfirmEmail.cshtml
+++ b/BabyInABag/Views/Account/ConfirmEmail.cshtml
@@ -2,13 +2,17 @@
     ViewBag.Title = "Confirm Email";
 }
 
-<h2>@ViewBag.Title.</h2>
 <main>
-    <section class="section-first section-spacing products">
-        <div>
-            <p>
-                Thank you for confirming your email. Please @Html.ActionLink("Click here to Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
-            </p>
-        </div>
-    </section>
+    <div class="wrapper">
+
+        <section class="section-first section-spacing">
+            <h2>@ViewBag.Title.</h2>
+            <div>
+                <p>
+                    Thank you for confirming your email. Please @Html.ActionLink("Click here to Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+                </p>
+            </div>
+        </section>
+
+    </div>
 </main>
