--- a/BabyInABag/Views/Account/ExternalLoginFailure.cshtml
+++ b/BabyInABag/Views/Account/ExternalLoginFailure.cshtml
@@ -2,7 +2,15 @@
     ViewBag.Title = "Login Failure";
 }
 
-<hgroup>
-    <h2>@ViewBag.Title.</h2>
-    <h3 class="text-danger">Unsuccessful login with service.</h3>
-</hgroup>
+<main>
+    <div class="wrapper">
+
+        <section class="section-first section-spacing">
+            <hgroup>
+                <h2>@ViewBag.Title.</h2>
+                <h3 class="text-danger">Unsuccessful login with service.</h3>
+            </hgroup>
+        </section>
+
+    </div>
+</main>
