--- a/BabyInABag/Views/Account/Login.cshtml
+++ b/BabyInABag/Views/Account/Login.cshtml
@@ -21,14 +21,14 @@
                     <div class="form-group">
 
                         <div>
-                            @Html.TextBoxFor(m => m.Email, new { Style = "width:70%;font-size:20px", placeholder = "Email" })<br />
+                            @Html.TextBoxFor(m => m.Email, new { @class = "w3-input w3-border", Style = "width:70%;", placeholder = "Email" })<br />
                             @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <div class="form-group">
 
                         <div>
-                            @Html.PasswordFor(m => m.Password, new { Style = "width:70%;;font-size:20px", placeholder = "Password" })<br />
+                            @Html.PasswordFor(m => m.Password, new { @class = "w3-input w3-border", Style = "width:70%;", placeholder = "Password" })<br />
                             @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                         </div>
                     </div>
