--- a/BabyInABag/Views/Account/Register.cshtml
+++ b/BabyInABag/Views/Account/Register.cshtml
@@ -5,60 +5,61 @@
 
 
 <main style="text-align:center">
-    <section class="section-first section-spacing products">
-  
+    <div class="wrapper">
+
+        <section class="section-first section-spacing products">
+            @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+            {
+
+                @Html.AntiForgeryToken()
+                <h4>Create a new account.</h4>
+                <hr />
+                @Html.ValidationSummary("", new { @class = "text-danger" })
 
 
-        @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-        {
 
-            @Html.AntiForgeryToken()
-            <h4>Create a new account.</h4>
-            <hr />
-            @Html.ValidationSummary("", new { @class = "text-danger" })
+                <div class="form-group">
 
-
-
-            <div class="form-group">
-                
-                <div>
-                    @Html.TextBoxFor(m => m.FirstName, new { Style = "width:70%;height:20%", placeholder = "First Name" })
+                    <div>
+                        @Html.TextBoxFor(m => m.FirstName, new { @class = "w3-input w3-border", Style = "width:70%;height:20%", placeholder = "First Name" })
+                    </div>
                 </div>
-            </div>
 
-            <div class="form-group">
-               
-                <div>
-                    @Html.TextBoxFor(m => m.LastName, new { Style = "width:70%;height:10%", placeholder = "Last Name" })
-                </div>
-            </div>
+                <div class="form-group">
 
-            <div class="form-group">
-               
-                <div>
-                    @Html.TextBoxFor(m => m.Email, new { Style = "width:70%;height:10%", placeholder = "Email" })
+                    <div>
+                        @Html.TextBoxFor(m => m.LastName, new { @class = "w3-input w3-border", Style = "width:70%;height:10%", placeholder = "Last Name" })
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-              
-                <div>
-                    @Html.PasswordFor(m => m.Password, new { Style = "width:70%;height:10%", placeholder = "Password" })
+
+                <div class="form-group">
+
+                    <div>
+                        @Html.TextBoxFor(m => m.Email, new { @class = "w3-input w3-border", Style = "width:70%;height:10%", placeholder = "Email" })
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-               
-                <div>
-                    @Html.PasswordFor(m => m.ConfirmPassword, new { Style = "width:70%; height:10%", placeholder = "Password" })
+                <div class="form-group">
+
+                    <div>
+                        @Html.PasswordFor(m => m.Password, new { @class = "w3-input w3-border", Style = "width:70%;height:10%", placeholder = "Password" })
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <div>
-                    <input type="submit" class="btn btn-default" value="Register" />
+                <div class="form-group">
+
+                    <div>
+                        @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "w3-input w3-border", Style = "width:70%; height:10%", placeholder = "Password" })
+                    </div>
                 </div>
-            </div>
-        }
+                <div class="form-group">
+                    <div>
+                        <input type="submit" class="btn btn-default" value="Register" />
+                    </div>
+                </div>
+            }
         </section>
-    </main>
+
+    </div>
+</main>
 
         @section Scripts {
             @Scripts.Render("~/bundles/jqueryval")
