--- a/BabyInABag/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/BabyInABag/Views/Account/ResetPasswordConfirmation.cshtml
@@ -2,16 +2,18 @@
     ViewBag.Title = "Reset password confirmation";
 }
 <main>
-    <section class="section-first section-spacing products">
+    <div class="wrapper">
 
-        <hgroup class="title">
-            <h1>@ViewBag.Title.</h1>
-        </hgroup>
-        <div>
-            <p>
-                Your password has been reset. Please @Html.ActionLink("click here to log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
-            </p>
-        </div>
-
+        <section class="section-first section-spacing">
+            <hgroup class="title">
+                <h1>@ViewBag.Title.</h1>
+            </hgroup>
+            <div>
+                <p>
+                    Your password has been reset. Please @Html.ActionLink("click here to log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+                </p>
+            </div>
         </section>
-    </main>
+
+        </div>
+</main>
