color table added

--- a/BabyInABag/Views/Admin/AddProduct.cshtml
+++ b/BabyInABag/Views/Admin/AddProduct.cshtml
@@ -60,7 +60,7 @@
                         <tr>
                             <td>
                                 <p style="margin:0px;">Price</p>
-                                <input type="number" name="Product_Price" placeholder="Product Price" style="width:100%" required>
+                                <input type="number" step="any" min="1" name="Product_Price" placeholder="Product Price" style="width:100%" required>
                             </td>
                         </tr>
                         <tr>
